[project]
name = "dash2hls"
version = "0.1.0"
description = "DASH to HLS converter with real-time decryption"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "quart>=0.19.0",
    "hypercorn>=0.16.0",
    "aiohttp>=3.9.0",
    "pycryptodome>=3.19.0",
    "click>=8.1.0",
    "lxml>=5.0.0",
]

[project.scripts]
dash2hls = "dash2hls.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
